simple header style

--- a/src/renderer/scss/component/_tooltip.scss
+++ b/src/renderer/scss/component/_tooltip.scss
@@ -1,11 +1,9 @@
-@import "../mixin/link.scss";
-
 .tooltip {
   position: relative;
 }
 
 .tooltip__link {
-  @include text-link();
+  // @include text-link();
 }
 
 .tooltip__body {
@@ -26,7 +24,7 @@
 }
 
 .tooltip--header .tooltip__link {
-  @include text-link(#aaa);
+  // @include text-link(#aaa);
   font-size: calc( var(--font-size) * 3/4 );
   margin-left: var(--button-padding);
   vertical-align: middle;
