--- a/src/renderer/scss/_gui.scss
+++ b/src/renderer/scss/_gui.scss
@@ -1,16 +1,45 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700);
+// Generic html styles used accross the App
+// component specific styling should go in the component scss file
 
-html
-{
+@font-face {
+  font-family: 'Metropolis';
+  font-weight: normal;
+  font-style: normal;
+  src: url('../../../static/font/metropolis/Metropolis-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Metropolis';
+  font-weight: bold;
+  font-style: normal;
+  src: url('../../../static/font/metropolis/Metropolis-ExtraBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Metropolis';
+  font-weight: normal;
+  font-style: italic;
+  src: url('../../../static/font/metropolis/Metropolis-MediumItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Metropolis';
+  font-weight: lighter;
+  font-style: normal;
+  src: url('../../../static/font/metropolis/Metropolis-Light.woff2') format('woff2');
+}
+
+html {
   height: 100%;
   font-size: var(--font-size);
 }
 
-body
-{
+body {
   color: var(--text-color);
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Metropolis', sans-serif;
   line-height: var(--font-line-height);
+  height: 100%;
+  overflow: hidden;
 }
 
 /* Custom text selection */
@@ -19,10 +48,27 @@ body
   color: var(--text-selection-color);
 }
 
-#window
-{
-  min-height: 100vh;
+#window {
+  height: 100%;
+  overflow: hidden; // so the scrollbar will not extend into the header
+}
+
+#main-content {
+  height: 100%;
+  overflow-y: auto;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  // use "margin-{bottom/top}" instead of "{bottom/top}"
+  // not using "margin-" causes flashes of un-rendered content when scrolling
+  margin-top: var(--header-height);
+  padding-bottom: var(--header-height); // fix this scrollbar extends beyond screen
+
   background: var(--window-bg);
+}
+
+.page__title {
+  padding: 20px 0;
 }
 
 .credit-amount--indicator
@@ -41,47 +87,21 @@ body
   font-weight: 700;
 }
 
-#main-content
-{
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  overflow: overlay;
-  padding: $spacing-vertical;
-  position: absolute;
-  top: var(--header-height);
-  bottom: 0;
-  left: 4px;
-  right: 4px;
-  main {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-  }
-  main.main--single-column
-  {
-    width: $width-page-constrained;
-  }
 
-  main.main--no-margin {
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
 
-.reloading {
-  &:before {
-    $width: 30px;
-    position: absolute;
-    background: url('../../../static/img/busy.gif') no-repeat center center;
-    width: $width;
-    height: $spacing-vertical;
-    content: "";
-    left: 50%;
-    margin-left: -1 / 2 * $width;
-    display: inline-block;
-  }
-}
+// .reloading {
+//   &:before {
+//     $width: 30px;
+//     position: absolute;
+//     background: url('../../../static/img/busy.gif') no-repeat center center;
+//     width: $width;
+//     height: $spacing-vertical;
+//     content: "";
+//     left: 50%;
+//     margin-left: -1 / 2 * $width;
+//     display: inline-block;
+//   }
+// }
 
 .icon-fixed-width {
   /* This borrowed is from a component of Font Awesome we're not using, maybe add it? */
@@ -194,9 +214,4 @@ p
 
 section.section-spaced {
   margin-bottom: $spacing-vertical;
-}
-
-.text-center
-{
-  text-align: center;
 }
