--- a/src/renderer/scss/component/_button.scss
+++ b/src/renderer/scss/component/_button.scss
@@ -1,101 +1,169 @@
-@import "../mixin/link.scss";
+// Styles for the <Button /> component
+// may be a button or a html element
 
-$button-focus-shift: 12%;
-
-.button-set-item {
-  position: relative;
-  display: inline-block;
-
-  + .button-set-item
-  {
-    margin-left: var(--button-intra-margin);
-  }
-}
-
-.button-block, .faux-button-block
-{
-  display: inline-block;
-  height: var(--button-height);
-  line-height: var(--button-height);
+button {
+  border: none;
   text-decoration: none;
-  border: 0 none;
-  text-align: center;
-  border-radius: var(--button-radius);
-  text-transform: uppercase;
-  .icon
-  {
-    top: 0em;
-  }
-  .icon:first-child
-  {
-    padding-right: 5px;
-  }
-  .icon:last-child
-  {
-    padding-left: 5px;
-  }
-  .icon:only-child
-  {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-.button-block
-{
   cursor: pointer;
-  font-weight: 500;
-  font-size: 14px;
-  user-select: none;
-  transition: background var(--animation-duration) var(--animation-style);
 }
 
-.button__content {
-  margin: 0 var(--button-padding);
-  display: flex;
-  .link-label {
-    text-decoration: none !important;
-  }
+button:disabled,
+a:disabled {
+  cursor: default;
 }
 
-.button-primary
-{
-
-  color: var(--button-primary-color);
-  background-color: var(--button-primary-bg);
+button.btn {
+  border-radius: var(--btn-radius);
+  padding: 10px;
+  color: var(--btn-primary-color);
+  background-color: var(--btn-primary-bg);
+  margin: 0 5px;
   box-shadow: var(--box-shadow-layer);
 
-  &:focus {
-    //color: var(--button-primary-active-color);
-    //background-color:color: var(--button-primary-active-bg);
-    //box-shadow: $box-shadow-focus;
+
+  &:hover {
+
   }
 }
-.button-alt
-{
-  background-color: var(--button-bg);
-  box-shadow: var(--box-shadow-layer);
-}
 
-.button-text
-{
-  @include text-link();
-  display: inline-block;
+button.btn.btn--alt {
+  color: var(--btn-alt-color);
+  background-color: #efefef;
 
-  .button__content {
-    margin: 0 var(--text-link-padding);
+  &:hover {
+    background-color: #dedede;
+    color: #111;
+  }
+
+  &:active {
+    background-color: #cdcdcd;
+  }
+
+  &:disabled {
+    color: var(--color-help);
+    background-color: #ededed;
   }
 }
-.button-text-help
-{
-  @include text-link(var(--text-help-color));
-  font-size: 0.8em;
-}
-.button--flat
-{
-  box-shadow: none !important;
+
+button.btn.btn--circle {
+  border-radius: 50%;
+  transition: all .5s;
+
+  &:hover:not([disabled]) {
+    border-radius: 10px;
+  }
 }
 
-.button--submit {
-    font-family: inherit;
-    line-height: 0;
+button.btn.btn--flat {
+  box-shadow: none;
 }
+
+button.btn--link {
+  background-color: transparent;
+  transition: all .2s;
+
+  :hover {
+    color: var(--btn-primary-bg);
+  }
+
+}
+
+.btn__label {
+  padding: 0 5px;
+}
+
+// .button-set-item {
+//   position: relative;
+//   display: inline-block;
+//
+//   + .button-set-item
+//   {
+//     margin-left: var(--button-intra-margin);
+//   }
+// }
+
+// .button-block, .faux-button-block
+// {
+//   display: inline-block;
+//   height: var(--button-height);
+//   line-height: var(--button-height);
+//   text-decoration: none;
+//   border: 0 none;
+//   text-align: center;
+//   border-radius: var(--button-radius);
+//   text-transform: uppercase;
+//   .icon
+//   {
+//     top: 0em;
+//   }
+//   .icon:first-child
+//   {
+//     padding-right: 5px;
+//   }
+//   .icon:last-child
+//   {
+//     padding-left: 5px;
+//   }
+//   .icon:only-child
+//   {
+//     padding-left: 0;
+//     padding-right: 0;
+//   }
+// }
+// .button-block
+// {
+//   cursor: pointer;
+//   font-weight: 500;
+//   font-size: 14px;
+//   user-select: none;
+//   transition: background var(--animation-duration) var(--animation-style);
+// }
+//
+// .button__content {
+//   margin: 0 var(--button-padding);
+//   display: flex;
+//   .link-label {
+//     text-decoration: none !important;
+//   }
+// }
+
+// .button-primary
+// {
+//
+//   color: var(--button-primary-color);
+//   background-color: var(--button-primary-bg);
+//   box-shadow: var(--box-shadow-layer);
+//
+//   &:focus {
+//     //color: var(--button-primary-active-color);
+//     //background-color:color: var(--button-primary-active-bg);
+//     //box-shadow: $box-shadow-focus;
+//   }
+// }
+// .button-alt
+// {
+//   background-color: var(--button-bg);
+//   box-shadow: var(--box-shadow-layer);
+// }
+//
+// .button-text
+// {
+//   display: inline-block;
+//
+//   .button__content {
+//     margin: 0 var(--text-link-padding);
+//   }
+// }
+// .button-text-help
+// {
+//   font-size: 0.8em;
+// }
+// .button--flat
+// {
+//   box-shadow: none !important;
+// }
+//
+// .button--submit {
+//     font-family: inherit;
+//     line-height: 0;
+// }
