--- a/src/renderer/scss/component/_header.scss
+++ b/src/renderer/scss/component/_header.scss
@@ -52,7 +52,7 @@
       padding: 10px;
 
       // always highlighted link to lbry uri
-      &.wunderbar__uri {
+      &.wunderbar__active-link {
         background-color: #a3ffb0
       }
     }
